--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
+    "mariadb": "^2.5.2",
     "nodemon": "^2.0.6",
+    "path": "^0.12.7",
     "pug": "^3.0.0"
   }
 }
